# wgpu_ai

./: Cargo.toml  LICENSE  rustfmt.toml
src/: main.rs
src/llama/: mod.rs
src/nn/: mod.rs  stats.rs  test_data.rs  transformer.rs
src/tensors/: any_tensor.rs  bytes_view.rs  cpu_tensor.rs  elementwise.rs  flow_functions.rs  gpu_num.rs  gpu_tensor.rs  gpu_vec.rs  mod.rs  pipelines.rs  quantized.rs  stream.rs  tensor.rs  wgpu_context.rs
