[package]
name = "wgpu_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
safetensors = "0.4.5"
memmap2 = "0.9.5"
wgpu = "23.0.0"
constcat = "0.5.1"
wide = "0.7.28"
futures = "0.3.31"
parking_lot = "0.12.3"
fxhash = "0.2.1"

serde = "1"
rayon = "1"
bytemuck = "1"


[profile.release]
strip = "debuginfo"
debug = false
lto = "fat"
panic = "abort"
